# Assignment2_LSTM_extracting_frequences

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  ANSWER_ALL_FEATURES_AND_FLOWS.md  ASSIGNMENT_VALIDATION_CHECKLIST.md  AUTHORS.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLEANUP_SCRIPT.sh  CODE_OF_CONDUCT.md  COMMUNITY_SETUP_COMPLETE.md  COMPLETE_ANSWERS_TO_YOUR_QUESTIONS.md  COMPLETE_FEATURES_EXECUTION_GUIDE.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_L_EXPERIMENT_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTORS.md  COVERAGE_FIX_SUMMARY.md  DEVELOPMENT_PROMPTS_LOG.md  Dockerfile  EXECUTION_AND_SCREENSHOT_GUIDE.md  EXECUTION_FLOWS_INDEX.md  HOW_TO_RUN_COMPLETE_EXPERIMENTS.md  INNOVATIONS_QUICK_START.md  INNOVATIONS_SUMMARY.md  INNOVATION_COMPLETE.md  LICENSE  LINK_VALIDATION_REPORT.md  M1_QUICK_START.md  QUICK_SCREENSHOT_REFERENCE.md  QUICK_TEST_GUIDE.md  README.md  README_LANDING_PAGE_VALIDATION.md  READY_FOR_SUBMISSION.md  RUN_TESTS.md  SECURITY.md  STATE_MANAGEMENT_SUMMARY.md  SUBMISSION_PACKAGE.md  TRAINING_STABILITY_FIX.md  (+35 more)
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml
config/: config.yaml  config_cosine_schedule.yaml  config_production.yaml
docs/: ARCHITECTURE.md  Assignment_English_Translation.md  CICD.md  COST_ANALYSIS_GUIDE.md  DASHBOARD.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  MIT_LEVEL_PROMPT_ENGINEERING_BOOK.md  README.md  README_DOCS.md  RESEARCH.md  TESTING.md  USAGE_GUIDE.md
docs/assignment/: ASSIGNMENT_100_PERCENT_COMPLETE.md
docs/cicd/: CICD_SETUP_COMPLETE.md  GIT_SETUP.md
docs/community/: START_HERE.txt  START_HERE_INNOVATIONS.txt
docs/development/: COVERAGE_FIX_SUMMARY.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_COMPLETE_SUMMARY.md  FIXES_APPLIED_SUMMARY.md  QUICK_FIX_SUMMARY.md  README_UPDATE_SUMMARY.md
docs/execution/: EXECUTION_MODES_COMPARISON.md
docs/experiments/: NORMALIZATION_BUG_FIX.md  QUICK_START_EXPERIMENTS.md  SEQUENCE_LENGTH_EXPERIMENTS_GUIDE.md  SEQUENCE_LENGTH_FINDINGS.md  SEQUENCE_LENGTH_QUICK_SUMMARY.md  STATE_MANAGEMENT_GUIDE.md  TRAINING_COMPARISON.md  TRAINING_INSTABILITY_FIX.md
docs/guides/: M1_MAC_COMPLETE_GUIDE.md  QUICKSTART.md
docs/innovations/: COST_ANALYSIS_CHECKLIST.md  COST_ANALYSIS_FEATURE_SUMMARY.md  COST_ANALYSIS_IMPLEMENTATION.md  COST_ANALYSIS_QUICK_START.md  INNOVATION_ROADMAP.md  WHATS_NEW_COST_ANALYSIS.md
docs/prd/: PRODUCT_REQUIREMENTS_DOCUMENT.md
docs/quality/: COVERAGE_FIX_CI.md  README_COVERAGE_FIX.md  SECTION_6_VALIDATION.md  TEST_FIXES_SUMMARY.md
docs/submission/: INSTRUCTOR_QUICK_REVIEW.md  QUICK_REFERENCE_CARD.md
examples/: iso_compliance_example.py
experiments/lstm_frequency_extraction_20251115_231209/: config.yaml
experiments/lstm_frequency_extraction_20251119_110920/: config.yaml
experiments/lstm_frequency_extraction_20251119_221012/: config.yaml
experiments/lstm_frequency_extraction_20251119_225349/: config.yaml
experiments/lstm_frequency_extraction_20251119_230821/: config.yaml
experiments/lstm_frequency_extraction_20251119_231632/: config.yaml
experiments/lstm_frequency_extraction_20251119_233044/: config.yaml
experiments/lstm_frequency_extraction_20251119_234107/: config.yaml
experiments/lstm_frequency_extraction_20251120_001830/: config.yaml
experiments/lstm_frequency_extraction_20251120_002523/: config.yaml
experiments/lstm_frequency_extraction_20251120_005002/: config.yaml
experiments/lstm_frequency_extraction_20251120_020750/: config.yaml
experiments/sequence_length_comparison/: analysis_report.txt  results_summary.json
plugins/: __init__.py  custom_metrics_plugin.py  data_augmentation_plugin.py  early_stopping_plugin.py  tensorboard_plugin.py
research/: MATHEMATICAL_ANALYSIS.md  README.md  __init__.py  comparative_analysis.py  run_full_research.py  sensitivity_analysis.py  test_research.py
screenshots/: README.md
src/: __init__.py
src/core/: __init__.py  config.py  container.py  (+4 more)
tests/: conftest.py  test_data.py  test_evaluation.py  test_integration.py  test_model.py  test_performance.py  test_quality_compliance.py  test_sequence_dataset.py  test_trainer.py  test_visualization.py
(+26 files in other folders)
